add: integration tests dependencies